[RELEASE] Release of t3events_course 1.0.0

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,186 @@
+2023-08-09         [RELEASE] Release of t3events_course 1.0.0 (Steffen Mevius)$
+2023-06-23 a842c2a [TASK] change pagination default (Steffen Mevius)
+2023-06-19 e86e214 [TASK][43687] Provide setting 'module' for rendering backend module (Oliver Noth)
+2023-06-14 b013cc3 [TASK] add pagination (Steffen Mevius)
+2023-06-01 42cdce3 [TASK] fix const (Steffen Mevius)
+2023-05-31 1aa596d [TASK] execute rector, add vendorExtensionName (Steffen Mevius)
+2023-05-31 1f83e49 [TASK] add v11 compatibility to composer.json (Steffen Mevius)
+2021-09-07 9998a99 [BUGFIX] enable richtext  in field requirements (Timo Gockel)
+2021-08-26 c1633ac [TASK] Remove call to parent construct in CourseController (Santiago Nunez Negrillo)
+2021-08-12 b493a93 [TASK] Adjust compatVersion condition in TypoScript (Santiago Nunez Negrillo)
+2021-08-12 2c4b2ed [TASK] Register extension icons (Santiago Nunez Negrillo)
+2021-08-05 7fe53a8 [TASK] Adjust templates to transform deprecated uploads fields to FAL fields (Santiago Nunez Negrillo)
+2021-08-04 e3b452a [TASK] Adjust TCA configuration for TYPO3 v10 (Santiago Nunez Negrillo)
+2021-08-04 0fd785a [TASK] Set examCosts field definition to float --> double is not an Extbase valid type (Santiago Nunez Negrillo)
+2021-08-04 36855b4 [TASK] Change Extbase persistence configuration to TYPO3 v10 syntax (Santiago Nunez Negrillo)
+2021-07-21 b6f0559 [TASK] Set version of dwenzel/t3events to dev-feature/version10compatible (Santiago Nunez Negrillo)
+2021-07-21 4cc6aac [TASK] Change use of deprecated constants TYPO3_version (Santiago Nunez Negrillo)
+2021-07-21 79d4aba [TASK] Move registerPlugin function to TCA/Overrides/tt_content.php (Santiago Nunez Negrillo)
+2021-07-21 968c77b [TASK] Add Services.yaml configuration file (Santiago Nunez Negrillo)
+2021-07-21 935d106 [TASK] Move TypoScript static file include to TCA/Overrides/sys_template.php file (Santiago Nunez Negrillo)
+2021-07-21 878d12b [TASK] Change use of old @lazy and @inject annotations (Santiago Nunez Negrillo)
+2021-07-21 de21007 [TASK] Adjust plugin and module configuration for TYPO3 v10 (Santiago Nunez Negrillo)
+2021-07-15 667ff30 [TASK] Adjust composer.json (Santiago Nunez Negrillo)
+2021-07-15 fc61ac2 [TASK] Update composer.json and ext_emconf.php files for TYPO3 v10 (Santiago Nunez Negrillo)
+2019-08-14 79382b0 [RELEASE] Release of t3events_course 0.11.0 (Dirk Wenzel)
+2019-08-14 ed032f3 [CI] require nimut/testing-framework: ^3.0 || ^4.0 (Dirk Wenzel)
+2019-08-14 82a8257 [CI] include mysql service (Dirk Wenzel)
+2019-08-14 1662114 [TASK] dependencies updated - support for PHP < 7.2 dropped - allow TYPO3 8 and 9 (Dirk Wenzel)
+2019-08-14 1814311 [TASK] require dwenzel/t3extension-tools:~1.3 (Dirk Wenzel)
+2019-08-13 cf38ceb [TASK] extension configuration refactored - require dwenzel/t3events:~1.1 - require dwenzel/t3extension-tools:~1.2 (Dirk Wenzel)
+2019-08-13 b849472 [TASK] use canonical name of main module for registration (Dirk Wenzel)
+2018-09-07 21849d5 [RELEASE] Release of t3events_course 0.10.0 (Dirk Wenzel) (Dirk Wenzel)
+2018-07-06 4a38caa [TASK] CI: use typo3/minimal instead of typo3/core (Dirk Wenzel)
+2018-07-06 dadacf9 [TASK] require dwenzel/t3events:>=0.40 (Dirk Wenzel)
+2018-07-06 012661c [BUGFIX] fixed error caused by missing settings in backend controllers. Parent class ActionController now implements method injectConfigurationManager and fetches the settings there. Therefore we can not use our own implementation anymore. BackendControllers now provide the configuration manager via getter method. (Dirk Wenzel)
+2018-06-28 a1a304a [TASK] CourseBackendController extended - now uses BackendTemplateView - method newAction added (Dirk Wenzel)
+2018-06-28 6c79421 [TASK] CourseBackendController and ScheduleBackendController refactored using traits. - obsolete method createDemandFromSettings removed. (Dirk Wenzel)
+2018-06-27 208f2db [RELEASE] Release of t3events_course 0.9.0 (Dirk Wenzel) (Dirk Wenzel)
+2018-06-27 8fb3563 [BUGFIX] fixed error in controllers caused by invalid count() usage (under PHP 7.2) (Dirk Wenzel)
+2018-06-27 8e814dc [BUGFIX] property extbaseType removed from CourseEventTrait. This avoids collision under PHP 7.2 (Dirk Wenzel)
+2018-06-27 7a9bc67 [BUGFIX] failing unit tests fixed. (Dirk Wenzel)
+2018-06-27 0ac0238 [BUGFIX] fix unit test for ScheduleDemandFactory - matcher for DateTimeObjects respects microseconds (Dirk Wenzel)
+2018-06-27 e4465ed [BUGFIX] require-dev nimut/testing-framework:^3.0 (Dirk Wenzel)
+2018-06-23 a59bf4d [TASK] require typo3/cms-core:>=8.7.0,<=8.7.99 and dwenzel/t3events:^0.39 (Support for TYPO3 version 6.2 and 7.6 dropped by required extension t3events) - travis CI build matrix adapted (Dirk Wenzel)
+2018-06-23 1f96a5b [TASK] ScheduleBackendController now uses a BackendTemplateView (Dirk Wenzel)
+2018-06-21 13e8d08 [TASK] require typo3/cms-core instead of deprecated package typo3/cms (Dirk Wenzel)
+2018-06-19 558e520 [BUGFIX] fixed errors caused by missing module name for backend links and invalid attribute renderMode in flash messages viewhelper (Dirk Wenzel)
+2018-06-19 8974d81 [TASK] use base class from testing framework for functional tests (Dirk Wenzel)
+2018-06-19 575c5e3 [BUGFIX] fix error caused by missing method emitSignal in CourseBackendController (Dirk Wenzel)
+2017-08-02 3b71839 [RELEASE] Release of t3events_course 0.8.0 (Dirk Wenzel) (Dirk Wenzel)
+2017-04-25 d1442f0 [BUGFIX] save unit test coverage file in folder .Build/log/coverage/Unit (Dirk Wenzel)
+2017-04-25 8c6f708 [TASK] travis-ci: use custom UnitTests.xml instead of those from testing frame work (Dirk Wenzel)
+2017-04-19 6bae961 [BUGFIX] travis-ci: fix path of configuration file for functional tests (Dirk Wenzel)
+2017-04-19 a0d0966 [TASK] allow TYPO3 8.7.x (Dirk Wenzel)
+2017-04-19 cd297bf [TASK] use nimut/testing-framework, drop coveralls reports (Dirk Wenzel)
+2017-03-07 57edd6e [TASK] require-dev phpunit/phpunit:<=4.8.0,<5.4 (Dirk Wenzel)
+2017-01-17 8f563f8 [TASK] composer.json: restore preferred-install 'source' for typo3/cms (functional test class does not exist in dist) (Dirk Wenzel)
+2017-01-17 52004ac [TASK] composer.json updated. Obsolete package mikey179/vfsStream removed, typo3/cms-core replaced by typo3/cms (Dirk Wenzel)
+2017-01-17 5a705b3 [TASK] SVG icons for backend modules added. (Dirk Wenzel)
+2017-01-05 ab55306 [RELEASE] Release of t3events_course 0.7.1 (Dirk Wenzel) (Dirk Wenzel)
+2017-01-05 7a12881 [RELEASE] Release of t3events_course 0.7.1 (Dirk Wenzel) (Dirk Wenzel)
+2016-12-30 31cd59c [TASK] deprecated settings replaced in table configuration (Dirk Wenzel)
+2016-12-30 0662cb3 [TASK] deprecated settings replaced in table configuration. Made configuration of of TCA wizards compatible with TYPO3 version 6.2 and newer. (Dirk Wenzel)
+2016-12-29 ec519cb [TASK] fixed error caused by wrong icon type unter TYPO3 version 6.2 (Dirk Wenzel)
+2016-12-29 11fe68f [TASK] new icons for backend modules added. (Dirk Wenzel)
+2016-12-29 299358d [BUGFIX] use correct section name 'main' in templates. (Dirk Wenzel)
+2016-12-14 52b88e3 [RELEASE] Release of t3events_course 0.7.0 (Dirk Wenzel) (Dirk Wenzel)
+2016-12-01 1975c9f [TASK] class constant EXTENSION_KEY and localized strings added. (Dirk Wenzel)
+2016-11-13 8cac7bb [TASK] Invalid argument renderMode removed from flashMessages view helper (Dirk Wenzel)
+2016-11-04 fbde533 [BUGFIX] correct visibility of method ScheduleRepository->createConstraintsFromDemand (Dirk Wenzel)
+2016-10-30 353151b travis-ci configuration: split codecov.io file detection for functional and unit tests (Dirk Wenzel)
+2016-10-30 850ef2e [TASK] travis-ci configuration: codecov.io file pattern for functional test changed (Dirk Wenzel)
+2016-10-30 6c90ee4 [TASK] View helpers removed. (Dirk Wenzel)
+2016-10-29 740859d [TASK] Hook ItemsProcFunc now extends class from t3events. (Dirk Wenzel)
+2016-10-29 748c184 [TASK] ScheduleRepositoryTrait implemented. ScheduleDemandFactory now sets deadLineAfter if hideAfterDeadline is set. ScheduleController refactored using traits. (Dirk Wenzel)
+2016-10-29 f9cf5f9 [BUGFIX] pass correct settings to getFilterOptions and set default filter options. (Dirk Wenzel)
+2016-10-29 09e24bd [TASK] CourseController refactored using FilterableControllerTrait. Constructor now sets namespace. Unit tests for CourseController added. (Dirk Wenzel)
+2016-10-29 4066697 [TASK] plugin flex form edited. Missing language keys corrected. Template Course/List edited: obsolete keys removed, invalid argument 'renderMode' removed from flashMessages view helper. (Dirk Wenzel)
+2016-10-28 7ffb2e4 [TASK] CourseRepositoryTrait implemented. CourseController refactored using traits. Unit tests for CourseController added. (Dirk Wenzel)
+2016-10-28 f762e15 [TASK] CourseDemandFactoryTrait, ScheduleDemandFactoryTrait, CourseDemandFactory and ScheduleDemandFactory implemented. CourseBackendController refactored using CourseDemandFactoryTrait. Unit tests for CourseBackendController added. (Dirk Wenzel)
+2016-10-28 daf2647 [TASK] unit tests for ScheduleBackendController added. (Dirk Wenzel)
+2016-10-28 7df1e79 [TASK] travis-ci configuration: diminish clone depth. (Dirk Wenzel)
+2016-10-28 bece202 [TASK] missing methods for CourseEventTrait implemented. Unit tests for CourseEventTrait, ScheduleDemand and Certificate added. (Dirk Wenzel)
+2016-10-28 1e048f2 [TASK] travis-ci configuration: generate coverage report for functional tests too, call codecov.io script after success. (Dirk Wenzel)
+2016-10-28 4ad10f2 [BUGFIX] require TYPO3 < 8.4 - currently the query parser generates invalid joins when more then one constraint is added. (Dirk Wenzel)
+2016-10-27 ce2af38 [TASK] obsolete fields removed from Course, Schedule and ScheduleDemand. Obsolete code in ScheduleRepository removed. Functional test fixed. (Dirk Wenzel)
+2016-10-26 48156df [BUGFIX] table configuration: default values for text fields added. (Dirk Wenzel)
+2016-10-26 f7763f1 [BUGFIX] missing field definition for 'tx_t3events_domain_model_performance.status_info' added (Dirk Wenzel)
+2016-10-26 62709b4 [BUGFIX] travis-ci: prefer source for typo3/cms (Dirk Wenzel)
+2016-10-26 5001f39 [TASK] functional test for ScheduleRepository added. (Dirk Wenzel)
+2016-10-25 0549d0d [TASK] allow TYPO3 version 8 (Dirk Wenzel)
+2016-10-25 06a1738 [TASK] travis configuration: fix error which prevented from running unit tests without coverage. Test TYPO3 version 8 too. (Dirk Wenzel)
+2016-10-25 23ab1fa [TASK] unit tests for Course and CourseEventTrait added. Initialize property CourseEventTrait->certificate with new ObjectStorage too. (Dirk Wenzel)
+2016-10-11 be490c3 [RELEASE] Release of t3events_course 0.6.0 (Dirk Wenzel) (Dirk Wenzel)
+2016-10-09 66d343b [TASK] method createConstraintsFromDemand is now public (Dirk Wenzel)
+2016-10-05 102ea04 [TASK] code style improved (Dirk Wenzel)
+2016-10-03 c71e37a [TASK] code style improved. (Dirk Wenzel)
+2016-10-03 782468c [TASK] require t3events ^0.29.0 (Dirk Wenzel)
+2016-10-03 7913f28 [TASK] require-dev t3events (Dirk Wenzel)
+2016-10-03 cbd1f27 [BUGFIX] vendor name of package t3event corrected in composer.json (Dirk Wenzel)
+2016-10-03 b4b5867 [TASK] vendor name of t3events changed. (Dirk Wenzel)
+2016-08-12 a6c4c4a  [RELEASE] Release of t3events_course 0.5.0 (Dirk Wenzel) (Dirk Wenzel)
+2016-07-20 6efeebd [TASK] markup for records listing in BE module improved. Usage of search form partial normalized. (Dirk Wenzel)
+2016-07-12 f272b32  [RELEASE] Release of t3events_course 0.4.0 (Dirk Wenzel) (Dirk Wenzel)
+2016-07-12 11e4a11 [TASK] obsolete asset removed. (Dirk Wenzel)
+2016-07-08 52de9ef [BUGFIX] legacy TypoScript constants corrected. (Dirk Wenzel)
+2016-07-07 be69eab [TASK] CourseDemand implemented. (Dirk Wenzel)
+2016-07-07 47b2ea9 [TASK] backend controllers list action now emits a signal before assigning template variables. (Dirk Wenzel)
+2016-07-05 de5fcfb [TASK] BREAKING! All controllers can now receive a merged array of TypoScript settings consisting of controller and action settings from TypoScript and settings from flexform. Some default TypoScript settings had to be moved. Please check whether your plugins/moduls still work as expected. (Dirk Wenzel)
+2016-06-29 2a54307 [RELEASE] Release of t3events_course 0.3.0 (Dirk Wenzel) (Dirk Wenzel)
+2016-06-16 73f2407 [BUGFIX] period constraints removed from default TypoScript settings for backend module thus preventing a difference between displayed filter and effective query constraints. (Dirk Wenzel)
+2016-06-16 103d8d3 [BUGFIX] missing default limit added to TypoScript configuration for backend module. (Dirk Wenzel)
+2016-06-07 9838440 [TASK] use dynamic controller key for getting settings in list action (Dirk Wenzel)
+2016-06-07 8d1f023 [TASK] Backend modules now use common layouts, templates and partials and CSS from t3events (Dirk Wenzel)
+2016-06-06 8523d22 [TASK] Default backend layout now renders header buttons. 'Create'-button added to list template for for course module (Dirk Wenzel)
+2016-06-06 aa61912 [TASK] persist module data only if parent::processRequest succeed. (Dirk Wenzel)
+2016-06-06 48ddd78 [TASK] Register modules for courses and schedules as submodules of main module Event. (Dirk Wenzel)
+2016-06-02 c4fca3d [TASK] list action of backend module for schedules is now filterable. (Dirk Wenzel)
+2016-05-31 46ecdf9 [TASK] ScheduleBackendController now uses SettingsUtilityTrait. (Dirk Wenzel)
+2016-05-27 de7ef30 [TASK] ScheduleBackendController now extends PerformanceController and uses ModuleDataTrait. Default TypoScript settings and list template adapted. (Dirk Wenzel)
+2016-05-24 a4f02b8 [RELEASE] Release of t3events_course 0.2.1 (Dirk Wenzel) (Dirk Wenzel)
+2016-05-17 ee20bc1 [BUGFIX] work around for issue in dependency resolver in TYPO3 6.2 (Dirk Wenzel)
+2016-03-22 d7676f9 [RELEASE] Release of t3events_course 0.2.0 (Dirk Wenzel)
+2016-03-22 ace3161 [TASK] t3events_course now requires at least t3events 0.19.1 (Dirk Wenzel)
+2016-03-19 c2e6d12 [TASK] templates for Course, Schedule and search form adapted for TYPO3 7. We now use the new view helper ts:be.editRecord (Dirk Wenzel)
+2016-03-14 f0f3139 [BUGFIX] unnecessary comma in ext_tables.sql removed (Dirk Wenzel)
+2016-03-11 8b41499 [TASK] CertificateType now extends AbstractEntity (Erik Rauchstein)
+2016-02-29 cfbf520 [RELEASE] Release of t3events_course 0.1.0 (Dirk Wenzel)
+2016-02-29 0ef9db8 [BUGFIX] configuration for coveralls corrected. (Dirk Wenzel)
+2016-02-29 b315712 [BUGFIX] build path corrected. (Dirk Wenzel)
+2016-02-29 6af9d77 [TASK] composer.json added, travis build script adapted. (Dirk Wenzel)
+2016-02-26 8a6b62b [TASK] CourseBackendController now implements FilterableControllerInterface. Default TypoScript for list action of ScheduleBackendController added. (Dirk Wenzel)
+2016-02-22 2e6adf4 [TASK] obsolete TypoScript removed, missing labels for backend added. (Dirk Wenzel)
+2016-02-21 ff87aea [TASK] Search form for modules now shows period select box only of periods are available and show a prepended option label for venue selector. Code cleanup in CourseBackendController. (Dirk Wenzel)
+2016-02-20 ca31634 [TASK] CourseBackendController->createDemandFromSettings now respects eventTypes, venues, genres and periods. Select field for audiences added to search form. Default values for periods added to module TypoScript (Dirk Wenzel)
+2016-02-20 ac39f6d [TASK] use layout Default for list view of CourseBackendController (Dirk Wenzel)
+2016-02-19 68333b4 [TASK] localized labels for backend module added. (Dirk Wenzel)
+2016-02-19 a6dc9d7 [TASK] List view of CourseBackendController now has a filter option (Dirk Wenzel)
+2016-02-19 066b808 [TASK] store demand and overwriteDemand of CourseBackendController->listAction into backend users session and settings. List action now respects a limit. (Dirk Wenzel)
+2016-02-19 9eab2e5 [TASK] localized labels for search form added (Dirk Wenzel)
+2016-02-18 d31f371 [TASK] do not rename tables anymore (Dirk Wenzel)
+2016-02-18 eff30e6 [BUGFIX] Remove legacy file (Sebastian Kreideweiß)
+2016-02-18 faef183 [TASK] re-added CourseController->listAction (Dirk Wenzel)
+2016-02-18 02be8e8 [TASK] localized labels for backend added. Display field certificate in event. (Dirk Wenzel)
+2016-02-18 2cad4cb [BUGFIX] Change BE labels for modules (Sebastian Kreideweiß)
+2016-02-18 a6053a4 [TASK] Remove unused fields document_based_registration, external_registration, registration_closed from performance (Sebastian Kreideweiß)
+2016-02-18 d421c07 [TASK] localized labels for backend added. (Dirk Wenzel)
+2016-02-18 1bfd00f [BUGFIX] error caused by wrong namespace in ScheduleDemand fixed (Dirk Wenzel)
+2016-02-18 ecb5152 [TASK] CourseController now extends AbstractController, CourseBackendController AbstractBackendController from t3events. (Dirk Wenzel)
+2016-02-06 02c78f3 [BUGFIX] field mode_instructionform renamed to mode_instruction_form (matching SQL and member variable in Course) (Dirk Wenzel)
+2016-02-04 105822f [BUGFIX] wrong use statement corrected. (Dirk Wenzel)
+2016-02-03 841bb68 [TASK] obsolete methods removed from AbstractController (Dirk Wenzel)
+2016-01-27 e0cc5b2 [TASK] obsolete unit tests removed (Dirk Wenzel)
+2016-01-27 849f3a5 [BUGFIX] Use instanceof for class comparison (Nicole Cordes)
+2016-01-26 4f51554 [TASK] Update certificate model (Vladimir Falcon)
+2016-01-26 11575b9 [TASK] Fixed Problem with the certificate model (Vladimir Falcon)
+2016-01-26 f18c007 [TASK] Add extbaseType mapping for migration (Sebastian Kreideweiß)
+2016-01-26 01f4a08 [BUGFIX] Correct sql and class member of mode_instruction_form (Sebastian Kreideweiß)
+2016-01-26 ae823bd Set constant for extbaseType in model course (Sebastian Kreideweiß)
+2016-01-26 7c5c4c9 [TASK] table configuration for performance edited: do not show a select field for course (Dirk Wenzel)
+2016-01-26 7ef1694 [BUGFIX] Remove wrong use statement to prevent fatal error (Nicole Cordes)
+2016-01-26 f775b4e [TASK] Add new properties with getters and setters (Sebastian Kreideweiß)
+2016-01-11 aa6ebe3 Rename UnitTest.xml to UnitTests.xml (Dirk Wenzel)
+2016-01-11 8ac378a Create UnitTest.xml (Dirk Wenzel)
+2016-01-11 8493f29 Delete README (Dirk Wenzel)
+2016-01-11 326f901 [TASK] configuration files for travis and coveralls added (Dirk Wenzel)
+2016-01-11 bc221a9 [TASK] field newUntil added to CourseEventTrait (Dirk Wenzel)
+2016-01-10 bf03404 [BUGFIX] property path corrected. (Dirk Wenzel)
+2016-01-10 c3183a2 [TASK] Reservation related templates removed. (Dirk Wenzel)
+2016-01-06 9335294 [TASK] CourseEventTrait implemented. (Dirk Wenzel)
+2015-12-17 26cd002 [TASK] TS configuration for backend module edited. (Dirk Wenzel)
+2015-12-16 11a5ac1 [TASK] CouseScheduleTrait implemented. Obsolete fields removed from SQL. (Dirk Wenzel)
+2015-12-15 05214a5 [TASK] TCA corrected, unit test for Schedule added. (Dirk Wenzel)
+2015-12-15 9470595 [TASK] table configuration for event edited. Extension path in localization keys corrected. (Dirk Wenzel)
+2015-12-14 bd45bbc [TASK] table configuration, TypoScript, sql and localized strings for schedule and event edited. (Dirk Wenzel)
+2015-12-09 603994c [TASK] table configuration and classes refactored, separating course and registration functionality (Dirk Wenzel)
+2015-12-07 72a76ad [TASK] Refactor dakosy_reservations to t3events_course (naming only) (Sebastian Kreideweiß)
+2015-12-07 0e0a44a [TASK] Remove targetgroup_desc and deactivate sys_cat tree fields eventcategories/branch (Sebastian Kreideweiß)
+2015-12-02 feab684 [TASK] Adapt backend form, add new columns, add language labels and sql statements for varius fields (Sebastian Kreideweiß)
+2015-11-19 597a291 [TASK] Add new field Event.newUntil (Sebastian Kreideweiß)
+2015-11-19 e03597c [TASK] Moved Event.tx_extbase_type to top of BE form (Sebastian Kreideweiß)
+2015-11-19 1eedfec Initial commit (Sebastian Kreideweiß)$
+$
 2019-08-14         [RELEASE] Release of t3events_course 0.11.0 (Dirk Wenzel)
 2019-08-14 ed032f3 [CI] require nimut/testing-framework: ^3.0 || ^4.0 (Dirk Wenzel)
 2019-08-14 82a8257 [CI] include mysql service (Dirk Wenzel)
